2026-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/pdf/*: Rebuilt

	* vignettes/rmd/Rcpp.bib: Update to several URLs
	* inst/bib/Rcpp.bib: Idem
	* vignettes/rmd/*: Idem
	* README.md: Idem

2026-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* vignettes/rmd/Rcpp.bib: Update package versions dates
	* inst/bib/Rcpp.bib: Idem

2026-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: No longer require RCPP_USING_UNWIND_PROTECT
	* inst/include/Rcpp/r/headers.h: Idem
	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
	* inst/tinytest/cpp/stack.cpp: No longer test with RCPP_USING_UNWIND_PROTECT
	* inst/tinytest/test_interface.R: Idem

2026-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R: Additional or adjusted #nocov tags
	* R/Rcpp.package.skeleton.R: Idem
	* R/RcppLdpath.R: Idem
	* R/asis.R: Idem
	* R/inline.R: Idem
	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
	* inst/include/Rcpp/internal/caster.h: Idem
	* inst/include/Rcpp/internal/export.h: Idem
	* inst/include/Rcpp/proxy/NamesProxy.h: Idem
	* inst/include/Rcpp/proxy/SlotProxy.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem
	* inst/include/Rcpp/vector/proxy.h: Idem
	* inst/include/Rcpp/vector/traits.h: Idem
	* inst/include/Rcpp/Environment.h: Idem
	* inst/include/Rcpp/Function.h: Idem
	* inst/include/Rcpp/Module.h: Idem
	* inst/include/Rcpp/S4.h: Idem
	* inst/include/Rcpp/as.h: Idem
	* inst/include/Rcpp/exceptions.h: Idem
	* inst/include/Rcpp/r_cast.h: Idem
	* src/attributes.cpp: Idem
	* src/barrier.cpp: Idem

2025-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Refine decision of when not to run all tests even
	when development version number is seen

2025-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Replace installation from drat section with r-universe

2025-12-22  Dirk Eddelbuettel  <edd@debian.org>
